# sandbox

./: .gitignore  README.md  UNet3D_testing.ipynb  inspect_data.py  pyproject.toml
groco/: README.md  equivariant_UNet.py
