[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
h5py = "^3.9.0"
matplotlib = "^3.7.1"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
